--- a/silicon-design/src/styles/styles.css
+++ b/silicon-design/src/styles/styles.css
@@ -27,6 +27,10 @@ body.dark-theme {
   margin: 0 auto;
 }
 
+nav.contact-navbar {
+  background-color: #f3f6ff;
+}
+
 .content-wrapper-nav {
   position: relative;
   padding-left: 1rem;
