--- a/silicon-design/src/styles/styles.scss
+++ b/silicon-design/src/styles/styles.scss
@@ -46,11 +46,10 @@ nav.contact-navbar {
   height: 4.75rem;
   z-index: 10;
 
-  ul {
-    list-style: none;
+  .utility-items {
     display: flex;
     align-items: center;
-    gap: 1.5rem;
+    list-style: none;
   }
 
   .theme-text {
@@ -65,146 +64,168 @@ nav.contact-navbar {
     display: flex;
     align-items: center;
     flex-grow: 1;
-    list-style: none;
-  }
 
-  .features {
-    color: map-get($navigation-text, color);
-    font-size: map-get($navigation-text, font-size);
-    font-weight: map-get($navigation-text, font-weight);
-    margin-left: 3rem;
-    line-height: 160%;
+    ul.nav-items {
+      list-style: none;
+      display: flex;
+      align-items: center;
+      gap: 1.5rem;
 
-    a {
-      color: inherit;
-      text-decoration: none;
-
-      &:hover {
-        color: $primary;
+      &.open {
+        display: flex;
       }
     }
   }
+}
 
-  .contact {
-    color: map-get($navigation-text, color);
-    font-size: map-get($navigation-text, font-size);
-    font-weight: map-get($navigation-text, font-weight);
-    line-height: 160%;
+.features {
+  color: map-get($navigation-text, color);
+  font-size: map-get($navigation-text, font-size);
+  font-weight: map-get($navigation-text, font-weight);
+  margin-left: 3rem;
+  line-height: 160%;
 
-    a {
-      color: inherit;
-      text-decoration: none;
+  a {
+    color: inherit;
+    text-decoration: none;
 
-      &:hover {
-        color: $primary;
+    &:hover {
+      color: $primary;
+    }
+  }
+}
+
+.contact {
+  color: map-get($navigation-text, color);
+  font-size: map-get($navigation-text, font-size);
+  font-weight: map-get($navigation-text, font-weight);
+  line-height: 160%;
+
+  a {
+    color: inherit;
+    text-decoration: none;
+
+    &:hover {
+      color: $primary;
+    }
+  }
+}
+
+.sign-in-button {
+  a {
+    text-decoration: none;
+  }
+  gap: 0;
+  .sign-in {
+    @each $property, $value in $button-with-icon {
+      #{$property}: $value;
+      &:hover,
+      &:focus {
+        background-color: darken($primary, 3%);
+        transform: translateY(-2px);
+      }
+
+      transition: background-color 0.3s ease, transform 0.2s ease;
+      &:active {
+        background-color: lighten($primary, 5%);
+      }
+
+      .sign-in-link {
+        text-decoration: none;
+        color: inherit;
+        display: flex;
+        align-items: center;
       }
     }
-  }
 
-  .sign-in-button {
-    a {
-      text-decoration: none;
-    }
-    gap: 0;
-    .sign-in {
-      @each $property, $value in $button-with-icon {
-        #{$property}: $value;
-        &:hover,
-        &:focus {
-          background-color: darken($primary, 3%);
-          transform: translateY(-2px);
-        }
-
-        transition: background-color 0.3s ease, transform 0.2s ease;
-        &:active {
-          background-color: lighten($primary, 5%);
-        }
-
-        .sign-in-link {
-          text-decoration: none;
-          color: inherit;
-          display: flex;
-          align-items: center;
-        }
-      }
-
-      .icon {
-        font-size: 1.4375rem;
-      }
+    .icon {
+      font-size: 1.4375rem;
     }
   }
+}
 
-  .toggle-container {
-    margin-right: 2rem;
+.toggle-container {
+  margin-right: 2rem;
+}
+
+.hamburger {
+  display: none;
+  width: 1.875rem;
+  height: 2.25rem;
+  background-image: url("/buttons/Hamburger.svg");
+  margin-right: 1rem;
+  cursor: pointer;
+  position: relative;
+
+  &.open {
+    background-image: url("/buttons/Close.svg");
   }
+}
 
-  .hamburger {
-    display: none;
-    width: 1.875rem;
-    height: 2.25rem;
-    background-image: url("/buttons/Hamburger.svg");
-    margin-right: 1rem;
+.nav-items {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+// Switch button from W3Schools
+.switch {
+  position: relative;
+  display: block;
+  width: 46px;
+  height: 26px;
+
+  input {
+    opacity: 0;
+    width: 0;
+    height: 0;
   }
+}
 
-  // Switch button from W3Schools
-  .switch {
-    position: relative;
-    display: block;
-    width: 46px;
-    height: 26px;
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: $muted-text;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
 
-    input {
-      opacity: 0;
-      width: 0;
-      height: 0;
-    }
-  }
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
 
-  .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: $muted-text;
-    -webkit-transition: 0.4s;
-    transition: 0.4s;
-  }
+input:checked + .slider {
+  background-color: $primary;
+}
 
-  .slider:before {
-    position: absolute;
-    content: "";
-    height: 18px;
-    width: 18px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: 0.4s;
-    transition: 0.4s;
-  }
+input:focus + .slider {
+  box-shadow: 0 0 1px $primary;
+}
 
-  input:checked + .slider {
-    background-color: $primary;
-  }
+input:checked + .slider:before {
+  -webkit-transform: translateX(20px);
+  -ms-transform: translateX(20px);
+  transform: translateX(20px);
+}
 
-  input:focus + .slider {
-    box-shadow: 0 0 1px $primary;
-  }
+.slider.round {
+  border-radius: 34px;
+}
 
-  input:checked + .slider:before {
-    -webkit-transform: translateX(20px);
-    -ms-transform: translateX(20px);
-    transform: translateX(20px);
-  }
-
-  .slider.round {
-    border-radius: 34px;
-  }
-
-  .slider.round:before {
-    border-radius: 50%;
-  }
+.slider.round:before {
+  border-radius: 50%;
 }
 
 // Dark mode
@@ -1088,8 +1109,25 @@ body.dark-theme footer {
   .content-wrapper-nav {
     padding: 0 1.1875rem;
 
-    .features {
-      display: none;
+    .features-container {
+      ul.nav-items {
+        flex-direction: column;
+        position: absolute;
+        align-items: flex-start;
+        top: 100%;
+        right: 0;
+        background-color: white;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        border-radius: 8px;
+        padding: 1rem;
+        width: 12.5rem;
+        display: none;
+        z-index: 5;
+
+        &.open {
+          display: flex;
+        }
+      }
     }
 
     .hamburger {
